fixing tablet panorama overlap with chapter menu

--- a/src/common/components/grid/grid-menu/index.scss
+++ b/src/common/components/grid/grid-menu/index.scss
@@ -91,6 +91,7 @@
     }
 
     p {
+      width: 80%;
       @include scale-prop(margin-top, 5);
       transition: color 0.3s, opacity 0.3s, transform 0.3s;
     }
